sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:3: error: Missing closing brace `}' assumed here
def cocktailSort2() {var x:Int=getValueCount(); var y:Int=0; var test:Boolean=false; var count:Int=0;
^AlgCocktailSort2:3: error: expected class or object definition
def cocktailSort2() {var x:Int=getValueCount(); var y:Int=0; var test:Boolean=false; var count:Int=0;
^